--- a/JavaScript/2-1/index.html
+++ b/JavaScript/2-1/index.html
@@ -2,11 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #box {
+            width: 100px;
+            height: 100px;
+            background-color: blue;
+        }
+    </style>
 </head>
+
 <body>
-    <script src="js/main.js"></script>
+    <div id="box">
+    </div>
+
+    <input type="button" value="click" onclick="myfunc()">
+
+    <script>
+        //問題①：idで要素を取得して、背景色を赤色に変更する処理を記述してください。
+        function myfunc(){
+            let change = document.getElementById('box');
+            change.style.backgroundColor = 'red';
+        }
+    </script>
 </body>
 </html>
